# rm-booking-curve-lab

./: .gitattributes  .gitignore  AGENTS.md  BookingCurveLab.spec  README.md  _tmp_diag_market_effect.py  make_release_zip.py  pyproject.toml  requirements.txt  rm-booking-curve-lab用コマンド一覧.md  rm-booking-curve-lab用コマンド一覧.txt  【スレッド移行：引き継ぎ（本文）】.txt
config/: hotels.json
docs/: BookingCurveLab_README.txt  CAREER_STRATEGY_and_TOOL_POLICY_rm-booking-curve.txt  START_HERE.md  ai_preamble_reference.md  command_reference.md  decision_log.md  dev_style.md  roadmap.md  spec_data_layer.md  spec_evaluation.md  spec_models.md  spec_overview.md  tasks_backlog.md
docs/handovers/: 2026-01-21_main_docs-governance-close.md  2026-01-21_main_docs-governance-start-here.md  2026-01-22_1646_fix-stabilize-before-phase3_stabilize-before-phase3.md  2026-01-23_1527_main_samp_main.md  (+9 more)
patches/: p0_docs_fix.patch  p0_fix_21ac434_crlf.patch  p1_weekshape_week_boundary.patch  p2_eol_guardrails.patch
src/: BookingCurveLab.spec  build_calendar_features.py  build_daily_errors.py  build_daily_snapshots_from_folder.py  gui_main.py  run_build_lt_csv.py  run_evaluate_forecasts.py  run_forecast_batch.py  run_forecast_from_avg.py  run_forecast_from_recent90.py  run_forecast_from_recent90_weighted.py  run_full_evaluation.py  run_plot_202506.py  run_plot_202506_fri_3m.py  run_plot_monthly_curve.py  run_segment_error_summary.py
tools/: assign_decision_ids.py  check_weekshape_boundary.py  diag_market_effect.py  diag_weekshape_factors.py  learn_base_small_weekshape.py  print_market_pace_series.py
(+79 files in other folders)
