[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rm-booking-curve-lab"
version = "0.6.10"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "openpyxl",
  "xlrd>=2.0.1",
  "jpholiday",
  "tkcalendar",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pyinstaller",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # 基本的な構文エラー・未使用・import整形だけ最初は有効にする
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
